Read paradata only for concerned survey units